# api/infrastructure/request/salon.go
@@ -1,6 +1,7 @@
 package request
 
 import (
+	"encoding/json"
 	"net/http"
 
 	"github.com/gorilla/schema"
@@ -22,4 +23,18 @@ func NewSalonFindNotBelongs(req *http.Request) *requestmodel.SalonFindNotBelongs
 	r := &requestmodel.SalonFindNotBelongs{}
 	r.AuthID = context.AuthID(req.Context())
 	return r
+}
+
+// NewBeauticianSalonCreata 美容師の行ける美容院追加
+func NewBeauticianSalonCreata(req *http.Request) (*requestmodel.BeauticianSalonCreata, error) {
+	r := &requestmodel.BeauticianSalonCreata{}
+	r.AuthID = context.AuthID(req.Context())
+	err := json.NewDecoder(req.Body).Decode(r)
+	if err != nil {
+		return nil, err
+	}
+	if err := validate.Struct(r); err != nil {
+		return nil, err
+	}
+	return r, nil
 }
